// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SurveyPermitForm renders correctly with default empty values 1`] = `
<DocumentFragment>
  <ul
    class="MuiList-root makeStyles-permitList-1 MuiList-dense"
  />
  <div
    class="MuiBox-root MuiBox-root-2"
  >
    <button
      aria-label="add permit"
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeMedium"
        >
          <svg
            role="presentation"
            style="width: 1.5rem; height: 1.5rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
        Add New Permit
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`SurveyPermitForm renders correctly with error on the permits field due to duplicates 1`] = `
<DocumentFragment>
  <ul
    class="MuiList-root makeStyles-permitList-19 MuiList-dense"
  >
    <li
      class="MuiListItem-container"
    >
      <div
        class="MuiListItem-root MuiListItem-dense MuiListItem-secondaryAction"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
          >
            <div
              class="MuiBox-root MuiBox-root-20"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    data-testid="permit.permits.[0].permit_number"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                      data-shrink="true"
                      for="permit.permits.[0].permit_number"
                      id="permit.permits.[0].permit_number-label"
                    >
                      Permit Number
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input"
                        id="permit.permits.[0].permit_number"
                        name="permit.permits.[0].permit_number"
                        required=""
                        type="text"
                        value="123"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
                        >
                          <span>
                            Permit Number *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                      data-shrink="true"
                      id="permit_type"
                    >
                      Permit Type
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                    >
                      <div
                        aria-haspopup="listbox"
                        aria-label="Permit Type"
                        aria-labelledby="permit_type permit.permits.[0].permit_type"
                        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                        id="permit.permits.[0].permit_type"
                        role="button"
                        tabindex="0"
                      >
                        Scientific Fish Collection Permit
                      </div>
                      <input
                        aria-hidden="true"
                        class="MuiSelect-nativeInput"
                        name="permit.permits.[0].permit_type"
                        required=""
                        tabindex="-1"
                        value="Scientific Fish Collection Permit"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
                        >
                          <span>
                            Permit Type
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    <p
                      class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="MuiListItemSecondaryAction-root"
      >
        <button
          aria-label="remove permit"
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </li>
    <li
      class="MuiListItem-container"
    >
      <div
        class="MuiListItem-root MuiListItem-dense MuiListItem-secondaryAction"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
          >
            <div
              class="MuiBox-root MuiBox-root-25"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    data-testid="permit.permits.[1].permit_number"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                      data-shrink="true"
                      for="permit.permits.[1].permit_number"
                      id="permit.permits.[1].permit_number-label"
                    >
                      Permit Number
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input"
                        id="permit.permits.[1].permit_number"
                        name="permit.permits.[1].permit_number"
                        required=""
                        type="text"
                        value="123"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
                        >
                          <span>
                            Permit Number *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                      data-shrink="true"
                      id="permit_type"
                    >
                      Permit Type
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                    >
                      <div
                        aria-haspopup="listbox"
                        aria-label="Permit Type"
                        aria-labelledby="permit_type permit.permits.[1].permit_type"
                        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                        id="permit.permits.[1].permit_type"
                        role="button"
                        tabindex="0"
                      >
                        Scientific Fish Collection Permit
                      </div>
                      <input
                        aria-hidden="true"
                        class="MuiSelect-nativeInput"
                        name="permit.permits.[1].permit_type"
                        required=""
                        tabindex="-1"
                        value="Scientific Fish Collection Permit"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
                        >
                          <span>
                            Permit Type
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    <p
                      class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="MuiListItemSecondaryAction-root"
      >
        <button
          aria-label="remove permit"
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </li>
  </ul>
  <div
    class="MuiBox-root MuiBox-root-26"
  >
    <button
      aria-label="add permit"
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeMedium"
        >
          <svg
            role="presentation"
            style="width: 1.5rem; height: 1.5rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
        Add New Permit
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`SurveyPermitForm renders correctly with errors on the permit_number and permit_type fields 1`] = `
<DocumentFragment>
  <ul
    class="MuiList-root makeStyles-permitList-11 MuiList-dense"
  >
    <li
      class="MuiListItem-container"
    >
      <div
        class="MuiListItem-root MuiListItem-dense MuiListItem-secondaryAction"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
          >
            <div
              class="MuiBox-root MuiBox-root-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    data-testid="permit.permits.[0].permit_number"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                      data-shrink="true"
                      for="permit.permits.[0].permit_number"
                      id="permit.permits.[0].permit_number-label"
                    >
                      Permit Number
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input"
                        id="permit.permits.[0].permit_number"
                        name="permit.permits.[0].permit_number"
                        required=""
                        type="text"
                        value="123"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="PrivateNotchedOutline-legendLabelled-15 PrivateNotchedOutline-legendNotched-16"
                        >
                          <span>
                            Permit Number *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                      data-shrink="true"
                      id="permit_type"
                    >
                      Permit Type
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                    >
                      <div
                        aria-haspopup="listbox"
                        aria-label="Permit Type"
                        aria-labelledby="permit_type permit.permits.[0].permit_type"
                        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                        id="permit.permits.[0].permit_type"
                        role="button"
                        tabindex="0"
                      >
                        Scientific Fish Collection Permit
                      </div>
                      <input
                        aria-hidden="true"
                        class="MuiSelect-nativeInput"
                        name="permit.permits.[0].permit_type"
                        required=""
                        tabindex="-1"
                        value="Scientific Fish Collection Permit"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="PrivateNotchedOutline-legendLabelled-15 PrivateNotchedOutline-legendNotched-16"
                        >
                          <span>
                            Permit Type
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    <p
                      class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="MuiListItemSecondaryAction-root"
      >
        <button
          aria-label="remove permit"
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </li>
    <li
      class="MuiListItem-container"
    >
      <div
        class="MuiListItem-root MuiListItem-dense MuiListItem-secondaryAction"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
          >
            <div
              class="MuiBox-root MuiBox-root-17"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    data-testid="permit.permits.[1].permit_number"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                      data-shrink="true"
                      for="permit.permits.[1].permit_number"
                      id="permit.permits.[1].permit_number-label"
                    >
                      Permit Number
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input"
                        id="permit.permits.[1].permit_number"
                        name="permit.permits.[1].permit_number"
                        required=""
                        type="text"
                        value="123"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="PrivateNotchedOutline-legendLabelled-15 PrivateNotchedOutline-legendNotched-16"
                        >
                          <span>
                            Permit Number *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                      data-shrink="true"
                      id="permit_type"
                    >
                      Permit Type
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                    >
                      <div
                        aria-haspopup="listbox"
                        aria-label="Permit Type"
                        aria-labelledby="permit_type permit.permits.[1].permit_type"
                        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                        id="permit.permits.[1].permit_type"
                        role="button"
                        tabindex="0"
                      >
                        Scientific Fish Collection Permit
                      </div>
                      <input
                        aria-hidden="true"
                        class="MuiSelect-nativeInput"
                        name="permit.permits.[1].permit_type"
                        required=""
                        tabindex="-1"
                        value="Scientific Fish Collection Permit"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="PrivateNotchedOutline-legendLabelled-15 PrivateNotchedOutline-legendNotched-16"
                        >
                          <span>
                            Permit Type
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    <p
                      class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="MuiListItemSecondaryAction-root"
      >
        <button
          aria-label="remove permit"
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </li>
  </ul>
  <div
    class="MuiBox-root MuiBox-root-18"
  >
    <button
      aria-label="add permit"
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeMedium"
        >
          <svg
            role="presentation"
            style="width: 1.5rem; height: 1.5rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
        Add New Permit
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`SurveyPermitForm renders correctly with existing permit values 1`] = `
<DocumentFragment>
  <ul
    class="MuiList-root makeStyles-permitList-3 MuiList-dense"
  >
    <li
      class="MuiListItem-container"
    >
      <div
        class="MuiListItem-root MuiListItem-dense MuiListItem-secondaryAction"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
          >
            <div
              class="MuiBox-root MuiBox-root-4"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    data-testid="permit.permits.[0].permit_number"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                      data-shrink="true"
                      for="permit.permits.[0].permit_number"
                      id="permit.permits.[0].permit_number-label"
                    >
                      Permit Number
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input"
                        id="permit.permits.[0].permit_number"
                        name="permit.permits.[0].permit_number"
                        required=""
                        type="text"
                        value="123"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-5 MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="PrivateNotchedOutline-legendLabelled-7 PrivateNotchedOutline-legendNotched-8"
                        >
                          <span>
                            Permit Number *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                      data-shrink="true"
                      id="permit_type"
                    >
                      Permit Type
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                    >
                      <div
                        aria-haspopup="listbox"
                        aria-label="Permit Type"
                        aria-labelledby="permit_type permit.permits.[0].permit_type"
                        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                        id="permit.permits.[0].permit_type"
                        role="button"
                        tabindex="0"
                      >
                        Park Use Permit
                      </div>
                      <input
                        aria-hidden="true"
                        class="MuiSelect-nativeInput"
                        name="permit.permits.[0].permit_type"
                        required=""
                        tabindex="-1"
                        value="Park Use Permit"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-5 MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="PrivateNotchedOutline-legendLabelled-7 PrivateNotchedOutline-legendNotched-8"
                        >
                          <span>
                            Permit Type
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    <p
                      class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="MuiListItemSecondaryAction-root"
      >
        <button
          aria-label="remove permit"
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </li>
    <li
      class="MuiListItem-container"
    >
      <div
        class="MuiListItem-root MuiListItem-dense MuiListItem-secondaryAction"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
          >
            <div
              class="MuiBox-root MuiBox-root-9"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    data-testid="permit.permits.[1].permit_number"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                      data-shrink="true"
                      for="permit.permits.[1].permit_number"
                      id="permit.permits.[1].permit_number-label"
                    >
                      Permit Number
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input"
                        id="permit.permits.[1].permit_number"
                        name="permit.permits.[1].permit_number"
                        required=""
                        type="text"
                        value="3213123123"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-5 MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="PrivateNotchedOutline-legendLabelled-7 PrivateNotchedOutline-legendNotched-8"
                        >
                          <span>
                            Permit Number *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                      data-shrink="true"
                      id="permit_type"
                    >
                      Permit Type
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                    >
                      <div
                        aria-haspopup="listbox"
                        aria-label="Permit Type"
                        aria-labelledby="permit_type permit.permits.[1].permit_type"
                        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                        id="permit.permits.[1].permit_type"
                        role="button"
                        tabindex="0"
                      >
                        Scientific Fish Collection Permit
                      </div>
                      <input
                        aria-hidden="true"
                        class="MuiSelect-nativeInput"
                        name="permit.permits.[1].permit_type"
                        required=""
                        tabindex="-1"
                        value="Scientific Fish Collection Permit"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-5 MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="PrivateNotchedOutline-legendLabelled-7 PrivateNotchedOutline-legendNotched-8"
                        >
                          <span>
                            Permit Type
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    <p
                      class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="MuiListItemSecondaryAction-root"
      >
        <button
          aria-label="remove permit"
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </li>
  </ul>
  <div
    class="MuiBox-root MuiBox-root-10"
  >
    <button
      aria-label="add permit"
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeMedium"
        >
          <svg
            role="presentation"
            style="width: 1.5rem; height: 1.5rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
        Add New Permit
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;
